# crypto-quant

./: .gitignore  AGENTS.md  CODEOWNERS  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: doc-sync-check.yml
config/: config.example.yml  risk.example.yml  runtime.example.yml  secrets.example.yml  small_live.example.yml
config/strategies/: s1.example.yml  s2.example.yml  s3.example.yml
core/: __init__.py
core/common/: __init__.py  clock.py  exceptions.py  logging.py  proxy.py  time_utils.py
core/data/: __init__.py  backfill.py  feed.py  gap_detector.py  memory_cache.py  parquet_io.py  sqlite_repo.py  symbol.py  ws_subscriber.py
core/db/: __init__.py  migration_runner.py
core/execution/: __init__.py  error_map.py  order_types.py  paper_engine.py  simulation.py
core/live/: __init__.py  executor.py  order_cli.py  small_live.py  trading_adapter.py
core/monitor/: __init__.py  market_health.py  paper_metrics.py  paper_readiness.py  simulation_report.py
core/research/: __init__.py  historical_paper_backtest.py
core/risk/: __init__.py  order_risk.py  portfolio_risk.py  position_risk.py  signal_risk.py
core/strategy/: __init__.py  base.py  indicators.py  s1_btc_trend.py  s2_altcoin_reversal.py  s3_funding_arb.py
core/universe/: __init__.py
dashboard/: data_simulator.py  paper_trading.py  server.py
dashboard/static/: index.html
docs/: 01-产品需求文档.md  02-架构设计文档.md  05-数据模型.md  06-术语表.md  08-路线图.md  09-踩坑记录.md  10-small-live-safety.md  11-Windows本地部署指南.md
docs/03-详细设计/: 01-数据层.md  04-执行层.md  README.md
docs/04-接口文档/: 01-策略接口.md  02-数据接口.md  03-订单接口.md  04-外部接口.md  README.md
docs/07-决策日志/: ADR-001-自研框架.md  ADR-002-Phase1先做回测.md  ADR-003-强制交易所侧止损.md  ADR-004-单交易所先跑通.md  ADR-005-起步3个策略而非10个.md  ADR-006-文档中文命名渐进式披露.md  ADR-007-禁止LLM直接产生信号.md  ADR-008-三层风控冗余.md  ADR-009-远程Agent与可信代码边界.md  README.md
docs/plans/: 2026-05-08-backfill-job-design.md  2026-05-08-backfill-job-plan.md  2026-05-08-dashboard-paper-metrics-design.md  2026-05-08-dashboard-paper-metrics-plan.md  2026-05-08-historical-paper-backtest-design.md  2026-05-08-historical-paper-backtest-plan.md  2026-05-08-livefeed-ws-bridge-design.md  2026-05-08-livefeed-ws-bridge-plan.md  2026-05-08-market-health-probe-design.md  2026-05-08-market-health-probe-plan.md  2026-05-08-paper-metrics-design.md  2026-05-08-paper-metrics-plan.md  2026-05-08-paper-readiness-check-design.md  2026-05-08-paper-readiness-check-plan.md  2026-05-08-simulation-degradation-gates-design.md  2026-05-08-simulation-degradation-gates-plan.md  2026-05-08-simulation-health-thresholds-design.md  2026-05-08-simulation-health-thresholds-plan.md  2026-05-08-simulation-report-design.md  2026-05-08-simulation-report-plan.md  2026-05-08-simulation-summary-design.md  2026-05-08-simulation-summary-plan.md  2026-05-08-ws-reconnect-design.md  2026-05-08-ws-reconnect-plan.md  2026-05-09-dashboard-core-strategy-risk-plan.md  2026-05-09-small-live-execution-design.md  2026-05-09-small-live-execution-plan.md  2026-05-09-small-live-safety-design.md  2026-05-09-small-live-safety-plan.md
migrations/: V1__init.sql  V2__core_tables.sql
research/: __init__.py  debug_donchian_analysis.py  debug_s1_conditions.py
research/backtest/: __init__.py  analyze_funding.py  analyze_s3_alternatives.py  analyze_scan.py  backtest_portfolio.py  backtest_s1.py  backtest_s2.py  backtest_s3.py  demo_dual_ma.py  s1_parameter_scan.py
scripts/: backfill.py  backfill_top50.py  backtest_paper.py  historical_readiness.py  market_health.py  paper_metrics.py  paper_readiness.py  run_paper.py  simulate_paper.py  small_live_order.py  small_live_readiness.py  start.sh  status.sh  stop.sh  summarize_simulation_report.py  validate_historical_report.py
skills/: README.md
strategies/: __init__.py
tests/: conftest.py
记忆/: 01-项目概览.md  02-当前状态.md  03-编码约定.md  04-最近决策.md  README.md
(+43 files in other folders)
