[project]
name = "crypto-quant"
version = "0.1.0.dev0"
description = "多策略虚拟币量化交易系统（research + production，共享代码与数据）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Blacker", email = "56584831+Blacker98k@users.noreply.github.com" },
]
keywords = ["crypto", "quantitative-trading", "binance", "backtest"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Topic :: Office/Business :: Financial :: Investment",
  "Private :: Do Not Upload",
]

# Phase 1 数据层起步依赖。每引入一个新库都有明确的"谁在用"（见注释）。
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "ccxt>=4.4", # exchange/* REST adapter
  "pyarrow>=15", # parquet_io 读写
  "duckdb>=0.10", # parquet_io 查询（列式扫描）
  "aiohttp>=3.9", # ws_subscriber WebSocket 客户端
  "fastapi>=0.110", # dashboard REST API
  "uvicorn[standard]>=0.29", # dashboard ASGI server
  "pandas>=2.2",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "pandas-stubs>=3.0.0.260204",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 研究区与顶层策略包与 core 同级，必须一起打进 wheel / 可编辑安装，
# 否则 ``import research`` / ``import strategies`` 在部分环境下会失效。
packages = ["core", "research", "strategies"]

# ─── ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "data",
  "logs",
  "reports",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
# 渐进式开 lint 规则——Phase 1 先开常用集，后续 PR 按需加严
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # 行长度交给 line-length 即可
  "RUF001", # 中文字符串中的全角标点；同 RUF002/RUF003 保持一致
  "RUF002", # 中文 docstring 大量使用全角标点；按编码约定应保持中文可读性而非强制半角
  "RUF003", # 中文注释分隔线使用全角括号；可读性优于 ASCII 洁癖
  "N818",   # 异常类名已与接口契约绑定（文档里的 DataNotAvailable 等）；不强制 Error 后缀
]

[tool.ruff.lint.extend-per-file-ignores]
# ``__all__`` 按模块语义分组可读性更好，不强行字母序排序
"core/common/exceptions.py" = ["RUF022"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # 测试函数命名宽松
"dashboard/server.py" = ["E402"]
"scripts/**/*.py" = ["N999"]
"scripts/run_paper.py" = ["E402", "N999"]
"scripts/simulate_paper.py" = ["E402", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
# Phase 1 不开全 strict——避免起步阶段被类型检查拖慢
# Phase 3a（涉及真钱）前再统一开 strict
strict = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
files = ["core"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "integration: 集成测试（需真实 SQLite / mock exchange）",
  "slow: 慢测试（默认跳过，CI 上跑）",
  "live: 需要真实交易所 API（手动跑）",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources.*",
]

# ─── coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["core"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]
show_missing = true
